proj1/tests/error/bad_characters.py
truth = !False
truth = False & False

